// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verify merge data for citus citus with no tables 1`] = `[]`;

exports[`verify merge data for citus citus with relationships and foreign key 1`] = `
[
  {
    "check_constraints": [],
    "citus_table_type": "local",
    "columns": [
      {
        "column_default": "nextval('users_id_seq'::regclass)",
        "column_name": "id",
        "comment": null,
        "data_type": "integer",
        "data_type_name": "int4",
        "is_nullable": "NO",
        "ordinal_position": 1,
        "table_name": "users",
        "table_schema": "public",
      },
      {
        "column_default": null,
        "column_name": "name",
        "comment": null,
        "data_type": "text",
        "data_type_name": "text",
        "is_nullable": "NO",
        "ordinal_position": 2,
        "table_name": "users",
        "table_schema": "public",
      },
    ],
    "comment": null,
    "computed_fields": [],
    "configuration": {},
    "foreign_key_constraints": [],
    "is_apollo_federation_supported": false,
    "is_enum": false,
    "is_table_tracked": true,
    "opp_foreign_key_constraints": [
      {
        "column_mapping": {
          "user_id": "id",
        },
        "constraint_name": "posts_user_id_fkey",
        "is_ref_table_tracked": true,
        "is_table_tracked": true,
        "on_delete": "r",
        "on_update": "r",
        "ref_table": "users",
        "ref_table_table_schema": "public",
        "table_name": "posts",
        "table_schema": "public",
      },
    ],
    "permissions": [],
    "primary_key": {
      "columns": [
        "id",
      ],
      "constraint_name": "users_pkey",
      "table_name": "users",
      "table_schema": "public",
    },
    "relationships": [
      {
        "rel_def": {
          "foreign_key_constraint_on": {
            "column": "user_id",
            "table": {
              "name": "posts",
              "schema": "public",
            },
          },
        },
        "rel_name": "posts",
        "rel_type": "array",
        "table_name": "users",
        "table_schema": "public",
      },
    ],
    "remote_relationships": [],
    "table_name": "users",
    "table_schema": "public",
    "table_type": "TABLE",
    "triggers": [],
    "unique_constraints": [],
    "view_info": null,
  },
  {
    "check_constraints": [],
    "citus_table_type": "local",
    "columns": [
      {
        "column_default": "nextval('posts_id_seq'::regclass)",
        "column_name": "id",
        "comment": null,
        "data_type": "integer",
        "data_type_name": "int4",
        "is_nullable": "NO",
        "ordinal_position": 1,
        "table_name": "posts",
        "table_schema": "public",
      },
      {
        "column_default": null,
        "column_name": "user_id",
        "comment": null,
        "data_type": "integer",
        "data_type_name": "int4",
        "is_nullable": "NO",
        "ordinal_position": 3,
        "table_name": "posts",
        "table_schema": "public",
      },
      {
        "column_default": null,
        "column_name": "post",
        "comment": null,
        "data_type": "text",
        "data_type_name": "text",
        "is_nullable": "NO",
        "ordinal_position": 2,
        "table_name": "posts",
        "table_schema": "public",
      },
    ],
    "comment": null,
    "computed_fields": [],
    "configuration": {},
    "foreign_key_constraints": [
      {
        "column_mapping": {
          "user_id": "id",
        },
        "constraint_name": "posts_user_id_fkey",
        "is_ref_table_tracked": true,
        "is_table_tracked": true,
        "on_delete": "r",
        "on_update": "r",
        "ref_table": "users",
        "ref_table_table_schema": "public",
        "table_name": "posts",
        "table_schema": "public",
      },
    ],
    "is_apollo_federation_supported": false,
    "is_enum": false,
    "is_table_tracked": true,
    "opp_foreign_key_constraints": [],
    "permissions": [],
    "primary_key": {
      "columns": [
        "id",
      ],
      "constraint_name": "posts_pkey",
      "table_name": "posts",
      "table_schema": "public",
    },
    "relationships": [
      {
        "rel_def": {
          "foreign_key_constraint_on": "user_id",
        },
        "rel_name": "user",
        "rel_type": "object",
        "table_name": "posts",
        "table_schema": "public",
      },
    ],
    "remote_relationships": [],
    "table_name": "posts",
    "table_schema": "public",
    "table_type": "TABLE",
    "triggers": [],
    "unique_constraints": [],
    "view_info": null,
  },
]
`;

exports[`verify merge data for citus citus with table 1`] = `
[
  {
    "check_constraints": [],
    "citus_table_type": "local",
    "columns": [
      {
        "column_default": "nextval('users_id_seq'::regclass)",
        "column_name": "id",
        "comment": null,
        "data_type": "integer",
        "data_type_name": "int4",
        "is_nullable": "NO",
        "ordinal_position": 1,
        "table_name": "users",
        "table_schema": "public",
      },
      {
        "column_default": null,
        "column_name": "name",
        "comment": null,
        "data_type": "text",
        "data_type_name": "text",
        "is_nullable": "NO",
        "ordinal_position": 2,
        "table_name": "users",
        "table_schema": "public",
      },
    ],
    "comment": null,
    "computed_fields": [],
    "configuration": {},
    "foreign_key_constraints": [],
    "is_apollo_federation_supported": false,
    "is_enum": false,
    "is_table_tracked": true,
    "opp_foreign_key_constraints": [],
    "permissions": [],
    "primary_key": {
      "columns": [
        "id",
      ],
      "constraint_name": "users_pkey",
      "table_name": "users",
      "table_schema": "public",
    },
    "relationships": [],
    "remote_relationships": [],
    "table_name": "users",
    "table_schema": "public",
    "table_type": "TABLE",
    "triggers": [],
    "unique_constraints": [],
    "view_info": null,
  },
]
`;
